# metre

./: Cargo.toml  README.md  doc.sh
.github/workflows/: build.yml  docs.yml  integration-tests.yml  publish.yml  unit-tests.yml
metre/: Cargo.toml
metre-macros/: Cargo.toml
metre-macros/src/: attrs.rs  config.rs  lib.rs
metre/src/: error.rs  full-example.txt  lib.rs  merge.rs  parse.rs  util.rs
metre/tests/: simple.rs  tests.rs
