[package]
name = "metre-macros"
version = "0.2.3"
edition = "2021"
license = "Apache-2.0"
description = "Macros for the metre crate"
repository = "https://github.com/ramiroaisen/metre"
documentation = "https://docs.rs/metre"
readme = "../README.md"
keywords = ["configuration", "config", "loader", "env"]
categories = ["config"]
authors = ["Ramiro Aisen <ramiroaisen@gmail.com>"]


[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
darling = "0.20.3"
proc-macro2 = "1.0.66"
quote = "1.0.32"
regex = "1.10.4"
regex_static = "0.1.1"
syn = "2.0.27"