[package]
name = "metre"
version = "0.1.0"
edition = "2021"
description = "Metre, the configuration loader for Rust"
repository = "https://github.com/ramiroaisen/metre"
documentation = "https://docs.rs/metre"
readme = "../README.md"
keywords = ["configuration", "config", "loader", "toml", "json", "yaml", "env", "url"]
categories = ["config", "encoding", "parsing"]
authors = ["Ramiro Aisen <ramiroaisen@gmail.com>"]


[dependencies]
metre-macros = { version = "0.1.0", path = "../metre-macros" }
json_comments = "0.2.2"
owo-colors = "4.0.0"
reqwest = { version = "0.12.4", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
toml = "0.8.13"