[package]
name = "me0e"
version = "0.2.5"
edition = "2021"
description = "Metre, the configuration loader for Rust"
repository = "https://github.com/ramiroaisen/metre"
documentation = "https://docs.rs/metre"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["configuration", "config", "loader", "env"] 
categories = ["config"]
authors = ["Ramiro Aisen <ramiroaisen@gmail.com>"]

[features]
default = [
  "derive",
  "env",
  "toml",
  "json",
]
full = [
  "derive",
  "env",
  "toml",
  "yaml",
  "json",
  "jsonc",
  "url-blocking",
  "url-async"
] 
env = []
derive = [ "dep:metre-macros" ]
toml = [ "dep:toml" ]
yaml = [ "dep:serde_yaml" ]
json = [ "dep:serde_json" ]
jsonc = [ "dep:json_comments", "dep:serde_json" ]
url-blocking = ["dep:reqwest", "reqwest/blocking"]
url-async = ["dep:reqwest"]
reqwest-rustls-tls = ["reqwest?/rustls-tls"]

[dependencies]
metre-macros = { version = "0.2.2", path = "../metre-macros", optional = true }
json_comments = { version = "0.2.2", optional = true }
owo-colors = { version = "4.0.0" }
reqwest = { version = "0.12.4", features = ["blocking", "rustls-tls"], optional = true }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
thiserror = "1.0.61"
toml = { version = "0.8.13", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]